<resources>
    <string name="app_name">Stresomjer</string>

    <string name="card_content_fragment_title">Measurements</string>
    <string name="graph_content_fragment_title">Graph</string>
    <string name="action_settings">Settings</string>
    <string name="start_measurement">Start measurement</string>
    <string name="wait">Measuring, please wait...</string>
    <string name="login">Login</string>
    <string name="not_registered">Don\'t have an account? Register now</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="already_registered">Already have an account? Login now</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="fields_required">All fields are required</string>
    <string name="activity">Activity:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="logout">Logout</string>
    <string name="activity_level">What was your activity level during measurement?</string>
    <string name="save_to_database">Save to database</string>
    <string name="error">Error loading! Check your Internet connection and try again.</string>
    <string name="none">None</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="heavy">Heavy</string>
    <string name="retry">Retry</string>
    <string name="result_bpm">Result bpm:</string>
    <string name="bpm">bpm</string>
    <string name="activity_level_required">Choose your activity level to proceed.</string>
    <string name="empty_list">This list is empty.\nPress the + button to add some data.</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="measure_instructions">Place your arm in a comfortable position a press START to begin.</string>
    <string name="measurement_required">Please complete a measurement to proceed.</string>
</resources>
